--- a/src/main/resources/fxml/BookingOverview.fxml
+++ b/src/main/resources/fxml/BookingOverview.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controller.BookingController">
    <top>
       <VBox spacing="25" style="-fx-background: linear-gradient(to bottom, #F7DC6F, #F4D03F); -fx-padding: 35; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.15), 5, 0, 0, 2);">
          <!-- Header -->
@@ -245,7 +246,7 @@
                      <Font name="System Bold" size="14.0" />
                   </font>
                </Label>
-               <ComboBox fx:id="pageSizeComboBox" value="25" style="-fx-background-radius: 8; -fx-border-color: #E9ECEF; -fx-border-radius: 8; -fx-border-width: 1; -fx-padding: 8;">
+               <ComboBox fx:id="pageSizeComboBox" style="-fx-background-radius: 8; -fx-border-color: #E9ECEF; -fx-border-radius: 8; -fx-border-width: 1; -fx-padding: 8;">
                   <font>
                      <Font size="14.0" />
                   </font>
