--- a/src/main/resources/fxml/PaymentDetails.fxml
+++ b/src/main/resources/fxml/PaymentDetails.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.text.Text?>
 
 <BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" 
+           fx:controller="controller.BookingController"
            stylesheets="@../css/application.css">
    <top>
       <HBox alignment="CENTER_LEFT" spacing="20" styleClass="header-gradient">
