--- a/src/main/resources/fxml/TicketOverview.fxml
+++ b/src/main/resources/fxml/TicketOverview.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controller.TicketController">
    <top>
       <VBox spacing="20" style="-fx-background-color: #2c3e50; -fx-padding: 30;">
          <!-- Header -->
@@ -241,7 +242,7 @@
                      <Font size="14.0" />
                   </font>
                </Label>
-               <ComboBox fx:id="pageSizeComboBox" value="100" style="-fx-background-radius: 5; -fx-border-color: #e0e6ed; -fx-border-radius: 5;">
+               <ComboBox fx:id="pageSizeComboBox" style="-fx-background-radius: 5; -fx-border-color: #e0e6ed; -fx-border-radius: 5;">
                   <font>
                      <Font size="14.0" />
                   </font>
