--- a/src/main/resources/fxml/BookingOverview.fxml
+++ b/src/main/resources/fxml/BookingOverview.fxml
@@ -51,10 +51,7 @@
                      <Font name="System Bold" size="14.0" />
                   </font>
                </Label>
-               <ComboBox fx:id="statusFilterComboBox" promptText="All Status" style="-fx-background-radius: 10; -fx-border-color: #E9ECEF; -fx-border-radius: 10; -fx-border-width: 2; -fx-min-width: 150; -fx-padding: 12;">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
+               <ComboBox fx:id="statusFilterComboBox" promptText="All Status" style="-fx-background-radius: 10; -fx-border-color: #E9ECEF; -fx-border-radius: 10; -fx-border-width: 2; -fx-min-width: 150; -fx-padding: 12; -fx-font-size: 14px;">
                </ComboBox>
             </VBox>
             
@@ -64,10 +61,7 @@
                      <Font name="System Bold" size="14.0" />
                   </font>
                </Label>
-               <ComboBox fx:id="dateRangeComboBox" promptText="Last 30 days" style="-fx-background-radius: 10; -fx-border-color: #E9ECEF; -fx-border-radius: 10; -fx-border-width: 2; -fx-min-width: 150; -fx-padding: 12;">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
+               <ComboBox fx:id="dateRangeComboBox" promptText="Last 30 days" style="-fx-background-radius: 10; -fx-border-color: #E9ECEF; -fx-border-radius: 10; -fx-border-width: 2; -fx-min-width: 150; -fx-padding: 12; -fx-font-size: 14px;">
                </ComboBox>
             </VBox>
             
@@ -246,10 +240,7 @@
                      <Font name="System Bold" size="14.0" />
                   </font>
                </Label>
-               <ComboBox fx:id="pageSizeComboBox" style="-fx-background-radius: 8; -fx-border-color: #E9ECEF; -fx-border-radius: 8; -fx-border-width: 1; -fx-padding: 8;">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
+               <ComboBox fx:id="pageSizeComboBox" style="-fx-background-radius: 8; -fx-border-color: #E9ECEF; -fx-border-radius: 8; -fx-border-width: 1; -fx-padding: 8; -fx-font-size: 14px;">
                </ComboBox>
                <Label text="entries" textFill="#7F8C8D">
                   <font>
