--- a/src/main/resources/fxml/FlightInformation.fxml
+++ b/src/main/resources/fxml/FlightInformation.fxml
@@ -46,10 +46,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="fromComboBox" maxWidth="1.7976931348623157E308" promptText="Select departure city" styleClass="border-gray-light padding-12">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
+                  <ComboBox fx:id="fromComboBox" maxWidth="1.7976931348623157E308" promptText="Select departure city" styleClass="border-gray-light padding-12" style="-fx-font-size: 14px;">
                   </ComboBox>
                </VBox>
                
@@ -59,10 +56,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="toComboBox" maxWidth="1.7976931348623157E308" promptText="Select destination city" styleClass="border-gray-light padding-12">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
+                  <ComboBox fx:id="toComboBox" maxWidth="1.7976931348623157E308" promptText="Select destination city" styleClass="border-gray-light padding-12" style="-fx-font-size: 14px;">
                   </ComboBox>
                </VBox>
                
@@ -72,10 +66,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <DatePicker fx:id="departureDatePicker" maxWidth="1.7976931348623157E308" promptText="Select date" styleClass="border-gray-light padding-12">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
+                  <DatePicker fx:id="departureDatePicker" maxWidth="1.7976931348623157E308" promptText="Select date" styleClass="border-gray-light padding-12" style="-fx-font-size: 14px;">
                   </DatePicker>
                </VBox>
                
@@ -85,10 +76,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="passengersComboBox" maxWidth="1.7976931348623157E308" promptText="Select passengers" styleClass="border-gray-light padding-12">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
+                  <ComboBox fx:id="passengersComboBox" maxWidth="1.7976931348623157E308" promptText="Select passengers" styleClass="border-gray-light padding-12" style="-fx-font-size: 14px;">
                   </ComboBox>
                </VBox>
                
@@ -126,10 +114,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="sortComboBox" promptText="Price" style="-fx-background-radius: 8; -fx-border-color: #E9ECEF; -fx-border-radius: 8; -fx-border-width: 1; -fx-padding: 8;">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
+                  <ComboBox fx:id="sortComboBox" promptText="Price" style="-fx-font-size: 14px;">
                   </ComboBox>
                </VBox>
                <VBox spacing="5">
@@ -138,10 +123,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="filterComboBox" promptText="All Flights" style="-fx-background-radius: 8; -fx-border-color: #E9ECEF; -fx-border-radius: 8; -fx-border-width: 1; -fx-padding: 8;">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
+                  <ComboBox fx:id="filterComboBox" promptText="All Flights" style="-fx-font-size: 14px;">
                   </ComboBox>
                </VBox>
             </HBox>
