--- a/src/main/resources/fxml/TicketOverview.fxml
+++ b/src/main/resources/fxml/TicketOverview.fxml
@@ -51,10 +51,7 @@
                      <Font name="System Bold" size="14.0" />
                   </font>
                </Label>
-               <ComboBox fx:id="statusFilterComboBox" promptText="All Status" style="-fx-background-radius: 5; -fx-border-color: #e0e6ed; -fx-border-radius: 5; -fx-min-width: 120;">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
+               <ComboBox fx:id="statusFilterComboBox" promptText="All Status" style="-fx-background-radius: 5; -fx-border-color: #e0e6ed; -fx-border-radius: 5; -fx-min-width: 120; -fx-font-size: 14px;">
                </ComboBox>
             </VBox>
             
@@ -64,10 +61,7 @@
                      <Font name="System Bold" size="14.0" />
                   </font>
                </Label>
-               <ComboBox fx:id="priorityFilterComboBox" promptText="All Priorities" style="-fx-background-radius: 5; -fx-border-color: #e0e6ed; -fx-border-radius: 5; -fx-min-width: 120;">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
+               <ComboBox fx:id="priorityFilterComboBox" promptText="All Priorities" style="-fx-background-radius: 5; -fx-border-color: #e0e6ed; -fx-border-radius: 5; -fx-min-width: 120; -fx-font-size: 14px;">
                </ComboBox>
             </VBox>
             
@@ -77,10 +71,7 @@
                      <Font name="System Bold" size="14.0" />
                   </font>
                </Label>
-               <ComboBox fx:id="assigneeFilterComboBox" promptText="All Agents" style="-fx-background-radius: 5; -fx-border-color: #e0e6ed; -fx-border-radius: 5; -fx-min-width: 120;">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
+               <ComboBox fx:id="assigneeFilterComboBox" promptText="All Agents" style="-fx-background-radius: 5; -fx-border-color: #e0e6ed; -fx-border-radius: 5; -fx-min-width: 120; -fx-font-size: 14px;">
                </ComboBox>
             </VBox>
             
@@ -242,10 +233,7 @@
                      <Font size="14.0" />
                   </font>
                </Label>
-               <ComboBox fx:id="pageSizeComboBox" style="-fx-background-radius: 5; -fx-border-color: #e0e6ed; -fx-border-radius: 5;">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
+               <ComboBox fx:id="pageSizeComboBox" style="-fx-background-radius: 5; -fx-border-color: #e0e6ed; -fx-border-radius: 5; -fx-font-size: 14px;">
                </ComboBox>
                <Label text="entries" textFill="#2c3e50">
                   <font>
